# fsutil

./: .drone.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: fsutil.h  mac.cpp  manipulation.cpp  nt.cpp  path.cpp  posix.cpp  stat.cpp  stat.h
test/: config.h  main.cpp  normalization.cpp  normalization_posix.cpp  normalization_windows.cpp  stat.cpp
